After Virtualmin is installed and the master administrator logs in for the first time, a wizard allowing basic configuration of memory and speed tradeoffs will be displayed. This allows the system to be tuned for web, mail or database hosting, depending on how the admin intends it to be used.
ClamAV's server scanner clamd can now be enabled on FreeBSD from within Virtualmin.
Netmasks can now be optionally specified for IP allocation ranges, rather than being always inherited from the primary interface's netmask.
All backups made manually, on schedule or from the command line are now logged, and can be viewed using the new Backup Logs page.
Added a field to the script upgrade notification to limit warnings to only some virtual servers, or to exclude servers.
Moved the option for a secondary group for domain owners to the template level.
---- Changes since 3.69 ----
Updated the Piwik script installer to 0.2.37, Redmine to 0.8.4, SMF to 1.1.9, OpenGoo to 1.4.1, Squirrelmail to 1.4.19, Coppermine to 1.4.24, Magento to 1.3.2.1, phpMyFAQ to 2.0.14, DokuWiki to 2009-02-14b, OpenX to 2.8.1, phpBB to 3.0.5, TikiWiki to 3.0, and phpMyAdmin to 3.1.5.
Bandwidth usage by date or month can now be graphed for sub-servers.
Partially completed backups (where only some domains failed) are now shown in the backup logs.
The email to mailboxes who are approaching or over quota can now be customized on the Disk Quota Monitoring page.
Added the Convert Alias Server page to change an existing alias virtual server into a sub-server.
Historic statistics graphs can now be plotted on a log scale, and both axis are used if multiple values are plotted.
Extra administrators can now be limited to a subset of the parent servers domains, either from the Edit Extra Administator page or using the command-line API.