@@ -42,3 +42,4 @@
 	- Script to get CGI urls for some help page
 
  - Make available modules to domain owners templatable
+	- CHANGELOG
