@@ -1452,7 +1452,7 @@ return ( [ $text{'sysinfo_bind'}, $bind8::bind_version ] );
 sub links_dns
 {
 local ($d) = @_;
-if ($config{'avail_dns'} && !$d->{'dns_submode'}) {
+if (!$d->{'dns_submode'}) {
 	return ( { 'mod' => 'bind8',
 		   'desc' => $text{'links_dns'},
 		   'page' => "edit_master.cgi?zone=".&urlize($d->{'dom'}),
